--- a/html/index.html
+++ b/html/index.html
@@ -73,7 +73,7 @@
                                 <div class="route-flow-middle">
                                     <ul class="route-ul">
                                         <li><a href="#">Home</a></li>
-                                        <li><a href="#">MyLibrary</a></li>
+                                        <li id="short-arw"><a href="#">MyLibrary</a></li>
                                         <li>회원정보</li>
                                     </ul>
                                 </div>
@@ -119,14 +119,14 @@
                                 저널검색
                             </span>
                         </span>
-                    </a>
-                    <a href="#" class="btn btn-word-spacing delete-btn btn-display">
+                    </label>
+                    <label href="#" class="btn btn-word-spacing delete-btn btn-display">
                         <span class="btn-right">
                             <span class="x-btn-middle">
                                 삭 제
                             </span>
                         </span>
-                    </a>
+                    </label>
                     <div class="select-section">
                         <span>총<strong>3건</strong></span>
                         <select name="status" id="output" title="출력현황">
@@ -270,10 +270,8 @@
                     </a>
                 </div>
                 <h4 id="Info"><img src="../img/h4-info.png" alt="제공정보"></h4>
-                <div class="btn-section">
-                    <div class="select-section">
-                        <span>총<strong>2건</strong></span>
-                    </div>
+                <div class="select-section">
+                    <span>총<strong>2건</strong></span>
                 </div>
                 <table class="table2">
                     <caption>제공정보표</caption>
