--- a/html/index.html
+++ b/html/index.html
@@ -108,7 +108,7 @@
                 <div class="btn-section">
                     <label for="popupbtn" class="btn plus-btn btn-display">
                         <span class="btn-right-plus">
-                            <span class="btn-middle">
+                            <span class="btn-middle-plus">
                                 키워드등록
                             </span>
                         </span>
@@ -269,10 +269,11 @@
                         </span>
                     </a>
                 </div>
-                <h4 id="Info"><img src="../img/h4-info.png" alt="제공정보"></h4>
-                <div class="select-section">
-                    <span>총<strong>2건</strong></span>
-                </div>
+                <h4 id="Info"><img src="../img/h4-info.png" alt="제공정보">
+                    <div class="select-section2">
+                        <span>총<strong>2건</strong></span>
+                    </div>
+                </h4>
                 <table class="table2">
                     <caption>제공정보표</caption>
                     <colgroup>
