nav-clear table fs changed #20

--- a/html/index.html
+++ b/html/index.html
@@ -19,46 +19,42 @@
                             <a href="#">LinkSaaS</a>
                         </h1>
                         <div id="nav-wrap">
-                            <div class="nav-bg-left">
-                                <div class="nav-bg-right">
-                                    <div class="nav-bg-middle">
-                                        <ul id="navbar-guide">
-                                            <l1 class="nav-list">
-                                                <a href="#" class="nav-a bg-deep nav-pd-1"><img src="../img/header/nav-home.png" alt="Home"></a>
-                                            </l1>
-                                            <l1 class="nav-list">
-                                                <a href="#" class="nav-a nav-hover-a nav-dif-padding1"><img src="../img/header/nav-info.png" alt="정보검색"><img class="arrow" src="../img/arrow.png" alt="menuopenbtn"></a>
-                                                <div class="hover-popup-bg">
-                                                    <ul class="hover-popup">
-                                                        <li class="hover-popup-list"><a href="#"><img src="../img/dropmenu/search-asy.png" alt="논문검색"></a></li>
-                                                        <li class="hover-popup-list"><a href="#"><img src="../img/dropmenu/search-book.png" alt="단행본검색"></a></li>
-                                                    </ul>
-                                                </div>
-                                            </l1>
-                                            <l1 class="nav-list">
-                                                <a href="#" class="nav-a nav-pd-3 nav-hover-a nav-dif-padding1"><img class="nav-default-info" src="../img/header/nav-info2.png" alt="전자정보"><img class="nav-hover-info" src="../img/dropmenu/info-hov.png" alt="전자정보(hover)"><img class="arrow" src="../img/arrow.png" alt="menuopenbtn"></a>
-                                                <div class="hover-popup-bg">
-                                                    <ul class="hover-popup">
-                                                        <li class="hover-popup-list"><a href="#"><img src="../img/dropmenu/search-asy.png" alt="논문검색"></a></li>
-                                                        <li class="hover-popup-list"><a href="#"><img src="../img/dropmenu/search-book.png" alt="단행본검색"></a></li>
-                                                    </ul>
-                                                </div>
-                                            </l1>
-                                            <l1 class="nav-list">
-                                                <a href="#" class="nav-a nav-c nav-pd-4 nav-hover-a"><img src="../img/header/nav-ml.png" alt="MyLibrary"><img class="arrow" src="../img/arrow.png" alt="menuopenbtn"></a>
-                                                <div class="hover-popup-bg">
-                                                    <ul class="hover-popup">
-                                                        <li class="hover-popup-list"><a href="#"><img src="../img/dropmenu/search-asy.png" alt="논문검색"></a></li>
-                                                        <li class="hover-popup-list"><a href="#"><img src="../img/dropmenu/search-book.png" alt="단행본검색"></a></li>
-                                                    </ul>
-                                                </div>
-                                            </l1>
-                                            <l1 class="nav-list">
-                                                <a href="#" class="nav-a nav-b">My Library</a>
-                                            </l1>
-                                        </ul>
-                                    </div>
-                                </div>
+                            <div class="nav-bg">
+                                <ul id="navbar-guide">
+                                    <l1 class="nav-list">
+                                        <a href="#"><img src="../img/header/nav-home.png" alt="Home"></a>
+                                    </l1>
+                                    <l1 class="nav-list">
+                                        <a href="#"><img src="../img/header/nav-info.png" alt="정보검색"><img class="arrow" src="../img/arrow.png" alt="menuopenbtn"></a>
+                                        <div class="hover-popup-bg">
+                                            <ul class="hover-popup">
+                                                <li class="hover-popup-list"><a href="#"><img src="../img/dropmenu/search-asy.png" alt="논문검색"></a></li>
+                                                <li class="hover-popup-list"><a href="#"><img src="../img/dropmenu/search-book.png" alt="단행본검색"></a></li>
+                                            </ul>
+                                        </div>
+                                    </l1>
+                                    <l1 class="nav-list">
+                                        <a href="#"><img class="nav-default-info" src="../img/header/nav-info2.png" alt="전자정보"><img class="nav-hover-info" src="../img/dropmenu/info-hov.png" alt="전자정보(hover)"><img class="arrow" src="../img/arrow.png" alt="menuopenbtn"></a>
+                                        <div class="hover-popup-bg">
+                                            <ul class="hover-popup">
+                                                <li class="hover-popup-list"><a href="#"><img src="../img/dropmenu/search-asy.png" alt="논문검색"></a></li>
+                                                <li class="hover-popup-list"><a href="#"><img src="../img/dropmenu/search-book.png" alt="단행본검색"></a></li>
+                                            </ul>
+                                        </div>
+                                    </l1>
+                                    <l1 class="nav-list">
+                                        <a href="#"><img src="../img/header/nav-ml.png" alt="MyLibrary"><img class="arrow" src="../img/arrow.png" alt="menuopenbtn"></a>
+                                        <div class="hover-popup-bg">
+                                            <ul class="hover-popup">
+                                                <li class="hover-popup-list"><a href="#"><img src="../img/dropmenu/search-asy.png" alt="논문검색"></a></li>
+                                                <li class="hover-popup-list"><a href="#"><img src="../img/dropmenu/search-book.png" alt="단행본검색"></a></li>
+                                            </ul>
+                                        </div>
+                                    </l1>
+                                    <l1 class="nav-list">
+                                        <a href="#">My Library</a>
+                                    </l1>
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -137,7 +133,7 @@
                         </select>
                     </div>
                 </div>
-                <table class="table1">
+                <table class="table1 table-fs">
                     <caption>맞춤정보신청표</caption>
                     <colgroup>
                         <col style="width: 6%; min-width: 100px;">
@@ -275,7 +271,7 @@
                         <span>총<strong>2건</strong></span>
                     </div>
                 </h4>
-                <table class="table2">
+                <table class="table2 table-fs">
                     <caption>제공정보표</caption>
                     <colgroup>
                         <col style="width: 5%;">
