main display modify #25

--- a/html/index.html
+++ b/html/index.html
@@ -21,7 +21,7 @@
                         <div id="nav-wrap">
                             <div class="nav-bg">
                                 <ul id="navbar-guide">
-                                    <l1 class="nav-list">
+                                    <l1 class="nav-list nl-first">
                                         <a href="#"><img src="../img/header/nav-home.png" alt="Home"></a>
                                     </l1>
                                     <l1 class="nav-list">
@@ -42,7 +42,7 @@
                                             </ul>
                                         </div>
                                     </l1>
-                                    <l1 class="nav-list">
+                                    <l1 class="nav-list nl-last">
                                         <a href="#"><img src="../img/header/nav-ml.png" alt="MyLibrary"><img class="arrow" src="../img/arrow.png" alt="menuopenbtn"></a>
                                         <div class="hover-popup-bg">
                                             <ul class="hover-popup">
@@ -51,7 +51,7 @@
                                             </ul>
                                         </div>
                                     </l1>
-                                    <l1 class="nav-list">
+                                    <l1 class="invis-nav">
                                         <a href="#">My Library</a>
                                     </l1>
                                 </ul>
@@ -145,7 +145,7 @@
                     </colgroup>
                     <thead>
                         <tr>
-                            <th title="선택" class="no-use-left-border" scope="col">선택</th>
+                            <th title="선택" scope="col">선택</th>
                             <th title="번호" scope="col">번호</th>
                             <th title="신청일" scope="col"><span class="letter-spacing-date">신청</span>일</th>
                             <th title="신청방법" scope="col">신청방법</th>
@@ -153,7 +153,7 @@
                             <th title="제공건수" class="no-use-right-border" scope="col">제공건수</th>
                         </tr>
                     </thead>
-                    <tbody>
+                    <tbody class="tb">
                         <tr>
                             <td><div class="td-size"><input id="chkbox1" type="checkbox"></div></td>
                             <td><div class="td-size">1</div></td>
@@ -295,7 +295,7 @@
                             <th title="출판년" class="no-use-right-border" scope="col">출판년</th>
                         </tr>
                     </thead>
-                    <tbody>
+                    <tbody class="tb">
                         <tr>
                             <td><div class="td-size"><input type="checkbox"></div></td>
                             <td><div class="td-size">1</div></td>
