not hover first nav-list #25

--- a/html/index.html
+++ b/html/index.html
@@ -24,7 +24,7 @@
                                     <l1 class="nav-list nl-first">
                                         <a href="#"><img src="../img/header/nav-home.png" alt="Home"></a>
                                     </l1>
-                                    <l1 class="nav-list">
+                                    <l1 class="nav-list hv-nl">
                                         <a href="#"><img src="../img/header/nav-info.png" alt="정보검색"><img class="arrow" src="../img/arrow.png" alt="menuopenbtn"></a>
                                         <div class="hover-popup-bg">
                                             <ul class="hover-popup">
@@ -33,7 +33,7 @@
                                             </ul>
                                         </div>
                                     </l1>
-                                    <l1 class="nav-list">
+                                    <l1 class="nav-list hv-nl">
                                         <a href="#"><img class="nav-default-info" src="../img/header/nav-info2.png" alt="전자정보"><img class="nav-hover-info" src="../img/dropmenu/info-hov.png" alt="전자정보(hover)"><img class="arrow" src="../img/arrow.png" alt="menuopenbtn"></a>
                                         <div class="hover-popup-bg">
                                             <ul class="hover-popup">
@@ -42,7 +42,7 @@
                                             </ul>
                                         </div>
                                     </l1>
-                                    <l1 class="nav-list nl-last">
+                                    <l1 class="nav-list hv-nl nl-last">
                                         <a href="#"><img src="../img/header/nav-ml.png" alt="MyLibrary"><img class="arrow" src="../img/arrow.png" alt="menuopenbtn"></a>
                                         <div class="hover-popup-bg">
                                             <ul class="hover-popup">
