position nav & sidebar & contents-box #25

--- a/assignment5/html/index.html
+++ b/assignment5/html/index.html
@@ -25,7 +25,7 @@
                                         <a href="#"><img src="../img/header/nav-home.png" alt="Home"></a>
                                     </l1>
                                     <l1 class="nav-list hv-nl">
-                                        <a href="#"><img src="../img/header/nav-info.png" alt="정보검색"><img class="arrow" src="../img/arrow.png" alt="menuopenbtn"></a>
+                                        <a href="#"><img class="nav-info" src="../img/header/nav-info.png" alt="정보검색"><img class="arrow" src="../img/arrow.png" alt="menuopenbtn"></a>
                                         <div class="hover-popup-bg">
                                             <ul class="hover-popup">
                                                 <li class="hover-popup-list"><a href="#"><img src="../img/dropmenu/search-asy.png" alt="논문검색"></a></li>
@@ -34,7 +34,7 @@
                                         </div>
                                     </l1>
                                     <l1 class="nav-list hv-nl">
-                                        <a href="#"><img class="nav-default-info" src="../img/header/nav-info2.png" alt="전자정보"><img class="nav-hover-info" src="../img/dropmenu/info-hov.png" alt="전자정보(hover)"><img class="arrow" src="../img/arrow.png" alt="menuopenbtn"></a>
+                                        <a href="#"><img class="nav-info nav-default-info" src="../img/header/nav-info2.png" alt="전자정보"><img class="nav-hv-info" src="../img/dropmenu/info-hov.png" alt="전자정보(hover)"><img class="arrow" src="../img/arrow.png" alt="menuopenbtn"></a>
                                         <div class="hover-popup-bg">
                                             <ul class="hover-popup">
                                                 <li class="hover-popup-list"><a href="#"><img src="../img/dropmenu/search-asy.png" alt="논문검색"></a></li>
@@ -43,7 +43,7 @@
                                         </div>
                                     </l1>
                                     <l1 class="nav-list hv-nl nl-last">
-                                        <a href="#"><img src="../img/header/nav-ml.png" alt="MyLibrary"><img class="arrow" src="../img/arrow.png" alt="menuopenbtn"></a>
+                                        <a href="#"><img class="nav-info" src="../img/header/nav-ml.png" alt="MyLibrary"><img class="arrow arrow-ml" src="../img/arrow.png" alt="menuopenbtn"></a>
                                         <div class="hover-popup-bg">
                                             <ul class="hover-popup">
                                                 <li class="hover-popup-list"><a href="#"><img src="../img/dropmenu/search-asy.png" alt="논문검색"></a></li>
