button position modified #25

--- a/assignment5/html/index.html
+++ b/assignment5/html/index.html
@@ -43,7 +43,7 @@
                                         </div>
                                     </l1>
                                     <l1 class="nav-list hv-nl nl-last">
-                                        <a href="#"><img class="nav-info" src="../img/header/nav-ml.png" alt="MyLibrary"><img class="arrow arrow-ml" src="../img/arrow.png" alt="menuopenbtn"></a>
+                                        <a href="#"><img class="nav-info ni-last" src="../img/header/nav-ml.png" alt="MyLibrary"><img class="arrow arrow-ml" src="../img/arrow.png" alt="menuopenbtn"></a>
                                         <div class="hover-popup-bg">
                                             <ul class="hover-popup">
                                                 <li class="hover-popup-list"><a href="#"><img src="../img/dropmenu/search-asy.png" alt="논문검색"></a></li>
@@ -103,21 +103,21 @@
                     <h3 id="h3-SDI"><img src="../img/h3-SDI.png" alt="맞춤정보(SDI)신청"></h3>
                 </div>
                 <div class="btn-section">
-                    <label for="popupbtn" class="btn plus-btn btn-display">
+                    <label for="popupbtn" class="btn plus-btn">
                         <span class="btn-right-plus">
                             <span class="btn-middle-plus">
                                 키워드등록
                             </span>
                         </span>
                     </label>
-                    <label for="journalbtn" class="btn search-btn btn-display">
+                    <label for="journalbtn" class="btn search-btn btn-lefmg">
                         <span class="btn-right">
                             <span class="btn-middle">
                                 저널검색
                             </span>
                         </span>
                     </label>
-                    <label href="#" class="btn btn-word-spacing delete-btn btn-display">
+                    <label href="#" class="btn btn-word-spacing delete-btn btn-position">
                         <span class="btn-right">
                             <span class="x-btn-middle">
                                 삭 제
